# mollie

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/: FUNDING.yml
crates/compiler/: Cargo.toml
crates/compiler/src/: allocator.rs  comment_writer.rs  error.rs  func.rs  lib.rs  main.rs  ty.rs
crates/compiler/src/expr/: array.rs  array_index.rs  binary.rs  call.rs  closure.rs  construct.rs  field_access.rs  if_else.rs  is_pattern.rs  literal.rs  mod.rs  type_index.rs  var.rs  vtable_access.rs  while.rs
crates/compiler/src/statement/: component_decl.rs  enum_decl.rs  func_decl.rs  implementation.rs  mod.rs  struct_decl.rs  trait_decl.rs  variable_decl.rs
crates/compiler/src/statement/expression/: array.rs  as_expr.rs  binary.rs  block.rs  call.rs  closure_expr.rs  enum_path.rs  ident.rs  if_else.rs  index.rs  literal.rs  mod.rs  node.rs  type_index.rs  while_expr.rs
crates/compiler/tests/: drawing.mol
crates/const/: Cargo.toml
crates/const/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/fmt/: Cargo.toml
crates/fmt/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  ptr.rs  ty.rs  utils.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  ty.rs
crates/parser/src/statement/: component_decl.rs  enum_decl.rs  func_decl.rs  implementation.rs  import.rs  mod.rs  module_decl.rs  struct_decl.rs  trait_decl.rs  variable_decl.rs  view_decl.rs
crates/parser/src/statement/expression/: array.rs  as_expr.rs  binary.rs  block.rs  call.rs  closure_expr.rs  enum_path.rs  for_in_expr.rs  ident.rs  if_else.rs  index.rs  literal.rs  mod.rs  node.rs  type_index.rs  while_expr.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  maybe_positioned.rs  positioned.rs  pretty_fmt.rs  span.rs
crates/tast/: Cargo.toml
crates/tast/src/: expression.rs  index.rs  lib.rs  statement.rs  visitor.rs
crates/typed-ast/: Cargo.toml
crates/typed-ast/src/: block.rs  constant.rs  expr.rs  expression.rs  lib.rs  stmt.rs  ty.rs  v2.rs  visitor.rs
crates/typing/: Cargo.toml
crates/typing/src/: adt.rs  array.rs  complex_type.rs  component.rs  enumeration.rs  error.rs  field_type.rs  function.rs  kind.rs  lib.rs  primitive.rs  primitive_type.rs  resolver.rs  solver.rs  structure.rs  ty.rs  type_context.rs  type_info.rs
crates/typing/src/ty/: mod.rs  primitive.rs
crates/typing/src/ty/complex/: array.rs  component.rs  enumeration.rs  function.rs  mod.rs  structure.rs
examples/: test.mol  ui.mol  ui.rs
lang-docs/: README.md
resources/tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
resources/tree-sitter/bindings/c/: tree-sitter-mollie.pc.in
resources/tree-sitter/bindings/c/tree_sitter/: tree-sitter-mollie.h
resources/tree-sitter/bindings/go/: binding.go  binding_test.go
resources/tree-sitter/bindings/node/: binding.cc  index.js
resources/tree-sitter/bindings/python/tests/: test_binding.py
resources/tree-sitter/bindings/python/tree_sitter_mollie/: __init__.py  binding.c
resources/tree-sitter/bindings/rust/: build.rs  lib.rs
resources/tree-sitter/bindings/swift/TreeSitterMollieTests/: TreeSitterMollieTests.swift
resources/tree-sitter/src/: grammar.json  node-types.json  parser.c
src/: lib.rs  main.rs
std/: iter.mol  lib.mol  option.mol
tests/: drawing.mol  main.mol  std.mol
