[package]
name = "mollie"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }

[dependencies]
mollie-shared = { workspace = true }
mollie-compiler = { workspace = true }
mollie-typing = { workspace = true }

[workspace.dependencies]
mollie-shared = { path = "./crates/shared" }
mollie-lexer = { path = "./crates/lexer" }
mollie-parser = { path = "./crates/parser" }
mollie-compiler = { path = "./crates/compiler" }
mollie-typing = { path = "./crates/typing" }

cranelift = { version = "0.122.0", features = [
    "jit",
    "module",
    "interpreter",
    "object",
    "native",
    "core",
] }

serde = { version = "1.0.219", features = ["derive", "rc"] }

ariadne = "0.5.1"
derive_more = { version = "2.0.1", features = [
    "display",
    "is_variant",
    "unwrap",
] }
indexmap = "2.10.0"
peekmore = { version = "1.3.0", features = ["smallvec"] }
