[package]
name = "mollie"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
absolute_paths = { level = "warn", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }

[dependencies]
mollie-shared = { workspace = true }
mollie-compiler = { workspace = true }
mollie-typing = { workspace = true }
mollie-ir = { workspace = true }
mollie-const = { workspace = true }
mollie-index = { workspace = true }
mollie-tast = { workspace = true }

[workspace.dependencies]
mollie-shared = { path = "./crates/shared" }
mollie-lexer = { path = "./crates/lexer" }
mollie-const = { path = "./crates/const" }
mollie-index = { path = "./crates/index" }
mollie-tast = { path = "./crates/tast" }
mollie-ir = { path = "./crates/ir" }
mollie-parser = { path = "./crates/parser" }
mollie-compiler = { path = "./crates/compiler" }
mollie-typing = { path = "./crates/typing" }

cranelift = { version = "0.124.1", features = [
    "jit",
    "module",
    "interpreter",
    "object",
    "native",
    "core",
] }

serde = { version = "1.0.226", features = ["derive", "rc"] }

ariadne = "0.5.1"
derive_more = { version = "2.0.1", features = [
    "display",
    "is_variant",
    "unwrap",
] }
indexmap = "2.11.4"
peekmore = { version = "1.3.0", features = ["smallvec"] }
