[package]
name = "mollie-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
mollie-shared = { workspace = true, features = ["cranelift"] }
mollie-lexer = { workspace = true }
mollie-parser = { workspace = true }
mollie-typing = { workspace = true }
mollie-const = { workspace = true }
indexmap = { workspace = true }
cranelift = { workspace = true }
ariadne = { workspace = true }

[lints]
workspace = true
