[package]
name = "mollie-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
emmy_lsp_types = "0.1.0"
mollie-typed-ast.workspace = true
mollie-typing.workspace = true
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread", "io-std"] }
tower-lsp-server = "0.23.0"

[lints]
workspace = true
