[package]
name = "mollie-typing"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
cranelift = { workspace = true }
mollie-shared = { workspace = true }
mollie-index = { workspace = true }
mollie-ir = { workspace = true }
mollie-const = { workspace = true }
serde = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["display"] }
indexmap = { workspace = true }

[lints]
workspace = true
