[package]
name = "mollie-typing"
version = "0.1.0"
edition = "2024"

[features]
ariadne = ["dep:ariadne"]
serde = ["dep:serde"]

[dependencies]
ariadne = { version = "0.6.0", optional = true }
mollie-shared = { workspace = true }
mollie-index = { workspace = true }
mollie-const = { workspace = true }
serde = { workspace = true, optional = true }
indexmap = { workspace = true }

[lints]
workspace = true
